Hotfix: Redis SerializationException 역직렬화 에러 수정
- .toList()의 경우, 직렬화 시 컬렉션 정보를 포함하지 않아 역직렬화 불가능
- .collect(Collectors.toList()) 사용